Fix references to license and logo files

--- a/Adapter/GenHTTP.Adapters.WiredIO.csproj
+++ b/Adapter/GenHTTP.Adapters.WiredIO.csproj
@@ -50,4 +50,11 @@
 
     </ItemGroup>
 
+    <ItemGroup>
+
+        <None Include="$(SolutionDir)\LICENSE" Pack="true" PackagePath="\"/>
+        <None Include="$(SolutionDir)\Resources\icon.png" Pack="true" PackagePath="\"/>
+
+    </ItemGroup>
+
 </Project>
