--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -18,18 +18,16 @@
 
     </PropertyGroup>
 
-    <ItemGroup Condition="$(PublishAot) == 'true'">
-        <RuntimeHostConfigurationOption Include="System.Threading.ThreadPool.HillClimbing.Disable" Value="true" />
+    <ItemGroup>
+        <RuntimeHostConfigurationOption Include="System.GC.DynamicAdaptationMode" Value="0" />
+        <RuntimeHostConfigurationOption Include="System.Runtime.ReadyToRun" Value="0" />
+        <RuntimeHostConfigurationOption Include="System.Threading.ThreadPool.HillClimbing.Disable" Value="1" />
     </ItemGroup>
     
     <ItemGroup>
-
         <ProjectReference Include="..\Adapter\GenHTTP.Adapters.WiredIO.csproj"/>
-
         <PackageReference Include="GenHTTP.Modules.Functional" Version="9.8.*" />
-
         <PackageReference Include="GenHTTP.Modules.DirectoryBrowsing" Version="9.8.*" />
-
     </ItemGroup>
 
 </Project>
