--- a/Adapter/GenHTTP.Adapters.WiredIO.csproj
+++ b/Adapter/GenHTTP.Adapters.WiredIO.csproj
@@ -16,10 +16,10 @@
         <Description>Adapter to run GenHTTP handlers within an Wired.IO app.</Description>
         <PackageTags>Wired.IO Adapter GenHTTP</PackageTags>
 
-        <Authors>Andreas Nägeli</Authors>
+        <Authors>Andreas Nägeli, Diogo Martins</Authors>
         <Company/>
 
-        <PackageProjectUrl>https://genhttp.org/</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/Kaliumhexacyanoferrat/wired-genhttp-adapter</PackageProjectUrl>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageIcon>icon.png</PackageIcon>
 
@@ -29,8 +29,6 @@
 
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>CS1591,CS1587,CS1572,CS1573</NoWarn>
-
-        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
 
     </PropertyGroup>
 
