--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -26,6 +26,8 @@
         <ProjectReference Include="..\Adapter\GenHTTP.Adapters.WiredIO.csproj"/>
         <PackageReference Include="GenHTTP.Modules.Functional" Version="9.8.*" />
         <PackageReference Include="GenHTTP.Modules.DirectoryBrowsing" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.OpenApi" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.ApiBrowsing" Version="9.8.*" />
     </ItemGroup>
 
 </Project>
