--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
         dotnet-version: 9.0
         
     - name: Build project
-      run: dotnet build GenHTTP.slnx -c Release
+      run: dotnet build -c Release
 
