--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -14,6 +14,8 @@
         <ServerGarbageCollection>true</ServerGarbageCollection>
         <TieredPGO>true</TieredPGO>
 
+        <IsPackable>false</IsPackable>
+        
     </PropertyGroup>
 
     <ItemGroup>
