--- a/Adapter/GenHTTP.Adapters.WiredIO.csproj
+++ b/Adapter/GenHTTP.Adapters.WiredIO.csproj
@@ -2,16 +2,16 @@
 
     <PropertyGroup>
 
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
 
-        <LangVersion>13.0</LangVersion>
+        <LangVersion>14.0</LangVersion>
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <ImplicitUsings>enable</ImplicitUsings>
 
-        <AssemblyVersion>9.8.1.0</AssemblyVersion>
-        <FileVersion>9.8.1.0</FileVersion>
-        <Version>9.8.1</Version>
+        <AssemblyVersion>10.0.0</AssemblyVersion>
+        <FileVersion>10.0.0</FileVersion>
+        <Version>10.0.0</Version>
 
         <Description>Adapter to run GenHTTP handlers within an Wired.IO app.</Description>
         <PackageTags>Wired.IO Adapter GenHTTP</PackageTags>
@@ -37,17 +37,17 @@
 
         <PackageReference Include="Wired.IO" Version="9.5.11" />
 
-        <PackageReference Include="GenHTTP.Api" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Api" Version="10.0.*" />
 
-        <PackageReference Include="GenHTTP.Modules.IO" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.IO" Version="10.0.*" />
 
-        <PackageReference Include="GenHTTP.Modules.ErrorHandling" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.ErrorHandling" Version="10.0.*" />
 
-        <PackageReference Include="GenHTTP.Modules.ClientCaching" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.ClientCaching" Version="10.0.*" />
 
-        <PackageReference Include="GenHTTP.Modules.Compression" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Modules.Compression" Version="10.0.*" />
 
-        <PackageReference Include="GenHTTP.Engine.Shared" Version="9.8.*" />
+        <PackageReference Include="GenHTTP.Engine.Shared" Version="10.0.*" />
 
     </ItemGroup>
 
